commit al master del blogpost en su versión mas reciente

--- a/articulo.html
+++ b/articulo.html
@@ -4,8 +4,12 @@
         <link rel="stylesheet" href="css/style.css"/>
     </head>
     <body>
-        <h1> Esto e sun blog!</h1>
-        <p> este es un parrafo </p>
+        <div id="container ">
+            <div id ="post">
+                <h1> Esto e sun blog!</h1>
+                <p> este es un parrafo </p>
+            </div>
+        </div>
 
     </body>
 </html>      
