estructura incial de la cabezera

--- a/articulo.html
+++ b/articulo.html
@@ -5,6 +5,9 @@
     </head>
     <body>
         <div id="container ">
+            <div id="cabezara">
+                creamos cabezera
+            </div>
             <div id ="post">
                 <h1> Esto e sun blog!</h1>
                 <p> este es un parrafo </p>
