--- a/articulo.html
+++ b/articulo.html
@@ -6,7 +6,10 @@
     <body>
         <div id="container ">
             <div id="cabezara">
-                creamos cabezera
+                Hyperblog
+                <span id="tagline">
+                    tu blog de confianza
+                </span>
             </div>
             <div id ="post">
                 <h1> Esto e sun blog!</h1>
