--- a/articulo.html
+++ b/articulo.html
@@ -8,6 +8,7 @@
             <div id ="post">
                 <h1> Esto e sun blog!</h1>
                 <p> este es un parrafo </p>
+                <p>parrafo suave </p>
             </div>
         </div>
 
