--- a/articulo.html
+++ b/articulo.html
@@ -8,7 +8,7 @@
             <div id="cabezara">
                 Hyperblog
                 <span id="tagline">
-                    tu blog de confianza
+                    tu blog de cabezera
                 </span>
             </div>
             <div id ="post">
