nuevo parrafo y cambio de color

--- a/articulo.html
+++ b/articulo.html
@@ -8,13 +8,16 @@
             <div id="cabezara">
                 Hyperblog
                 <span id="tagline">
-                    tu blog de confianza
-                </span>
+                    tu blog maestro                </span>
             </div>
             <div id ="post">
                 <h1> Esto e sun blog!</h1>
                 <p> este es un parrafo </p>
                 <p>parrafo suave </p>
+                <p>
+                    nuevo parrafo 
+                </p>
+
             </div>
         </div>
 
