--- a/articulo.html
+++ b/articulo.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title> titulo del post   </title>
+        <title> hyperblog 2.0  </title>
         <link rel="stylesheet" href="css/style.css"/>
     </head>
     <body>
