agregamos el logo y color de fondo

--- a/articulo.html
+++ b/articulo.html
@@ -6,12 +6,13 @@
     <body>
         <div id="container ">
             <div id="cabezara">
+                <img id="logo" src="imagenes/logo.png">
                 Hyperblog
                 <span id="tagline">
-                    tu blog maestro                </span>
+                    tu blog maestro  </span>
             </div>
             <div id ="post">
-                <h1> Esto e sun blog!</h1>
+                <h1> Esto es un blog!</h1>
                 <p> este es un parrafo </p>
                 <p>parrafo suave </p>
                 <p>
