--- a/articulo.html
+++ b/articulo.html
@@ -12,7 +12,7 @@
                     tu blog maestro  </span>
             </div>
             <div id ="post">
-                <h1> Esto es un blog!</h1>
+                <h1> Esto es un bloooog!</h1>
                 <p> este es un parrafo </p>
                 <p>parrafo suave </p>
                 <p>
